# rum-and-raisin-doom

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  configure.ac  rum-and-raisin-doom.sln
ext/cimguiglue/: cimguiglue.cpp  cimguiglue.h  cimguiglue_config.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
man/: Makefile.am
man/bash-completion/: Makefile.am
msvc/: config.h  doom.vcxproj  doom.vcxproj.filters  ext.vcxproj  ext.vcxproj.filters  include-doom.props  include-ext.props  include-opl.props  include-pcsound.props  include-sdl.props  include-textscreen.props  opl.vcxproj  opl.vcxproj.filters  pcsound.vcxproj  pcsound.vcxproj.filters  profiling-build.props  rum-and-raisin-doom.natvis  rum-and-raisin-doom.rc  rum-and-raisin-doom.vcxproj  rum-and-raisin-doom.vcxproj.filters  textscreen.vcxproj  textscreen.vcxproj.filters  vcpkg-libs.props
opl/: opl.c  opl_sdl.c  opl_timer.c
pcsound/: pcsound.c  pcsound_bsd.c  pcsound_linux.c  pcsound_sdl.c  pcsound_win32.c
src/: CMakeLists.txt  Makefile.am  aes_prng.c  d_demoloop.cpp  d_demoloop.h  d_event.c  d_event.h  d_gameconf.cpp  d_gameconf.h  d_gameflow.cpp  d_gameflow.h  d_gameflow_dmapinfo.cpp  d_gameflow_umapinfo.cpp  d_iwad.c  d_iwad.cpp  d_iwad.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  d_ticcmd.h  deh_defs.h  deh_io.c  deh_io.h  deh_main.c  deh_main.cpp  deh_main.h  deh_mapping.c  deh_mapping.h  deh_str.c  deh_str.h  deh_text.c  doomkeys.h  doomtype.h  gusconf.c  gusconf.h  i_cdmus.c  i_endoom.c  i_endoom.h  i_error.cpp  (+109 more)
src/doom/: Makefile.am  am_map.c  am_map.cpp  am_map.h  d_englsh.h  d_gameflow_chex.cpp  d_gameflow_doom.cpp  d_gameflow_doom2.cpp  d_gameflow_hacx.cpp  d_gameflow_plutonia.cpp  d_gameflow_tnt.cpp  d_gamesim.cpp  d_gamesim.h  d_items.cpp  d_items.h  d_main.c  d_main.cpp  d_main.h  d_net.c  d_player.h  d_playsim.cpp  d_playsim.h  d_playsim_chex.cpp  d_playsim_doom.cpp  d_playsim_doom2.cpp  d_playsim_hacx.cpp  d_playsim_plutonia.cpp  d_playsim_tnt.cpp  d_think.h  deh_ammo.c  deh_ammo.cpp  deh_bexbits.cpp  deh_bexpars.cpp  deh_bexptr.cpp  deh_bexstr.c  deh_bexstr.cpp  deh_bexstrings.cpp  deh_bexthing.cpp  deh_cheat.c  deh_doom.c  (+135 more)
src/heretic/: d_main.c  mn_menu.c  r_draw.c  r_local.h  r_main.c
src/hexen/: h2_main.c  mn_menu.c  r_draw.c  r_local.h  r_main.c  sb_bar.c
src/setup/: display.c  keyboard.c  mode.c
src/strife/: d_main.c  m_menu.c  r_draw.c  r_main.c  r_main.h
textscreen/: txt_main.h  txt_sdl.c
wads/: boomtest.wad
